fix[Auth] : Add CORS configuration (fifth try)